fix(ai-provider): align codex output contract